# Midi-Hairless-Juce

./: .gitignore  BUILD.md  CMakeLists.txt  LICENSE  README.md  build.bat
Source/: Main.cpp  MainComponent.cpp  MainComponent.h  MidiSerialBridge.cpp  MidiSerialBridge.h  ModernLookAndFeel.cpp  ModernLookAndFeel.h  SerialPortManager.cpp  SerialPortManager.h
scripts/: build-windows.bat
